--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   }
